Added a repo layer for the user. Added an openapi description of crud methods for the user
