# openapi/openapi.yaml
@@ -6,6 +6,10 @@ servers:
   - url: localhost:8080/api
     description: Sandbox server (uses test data)
 paths:
+
+####################################################
+################# crud для задач ###################   
+#################################################### 
   /tasks:
     get:
       summary: Get all tasks
@@ -80,9 +84,92 @@ paths:
       responses:
         '204':  
           description: Task deleted successfully
-              
+
+####################################################
+############### crud пользователей #################
+####################################################     
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'       
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    /users/{ID}:
+      patch:
+        summary: Update user by ID
+        tags:
+          - users
+        parameters:
+          - name: ID
+            in: path
+            schema:
+              type: integer 
+              format: uint 
+            required: true
+            description: The ID of the user to update
+        requestBody:
+          description: The user to update
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+      delete:
+        summary: Delete user by ID
+        tags:
+          - users
+        parameters:
+          - name: ID
+            in: path
+            schema:
+              type: integer 
+              format: uint
+            required: true
+            description: The ID of the user to delete
+        responses:
+          '204':  
+            description: User deleted successfully          
+
+
+####################################################
+############ дополнительные структуры ##############    
+#################################################### 
 components:
   schemas:
+    # задача  
     Task:
       type: object
       properties:
@@ -93,3 +180,14 @@ components:
           type: string
         is_done:
           type: boolean
+    # пользователь
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint 
+        email:
+          type: string
+        password_hash:
+          type: string    
